--- a/frntnd-dashboard/src/App.css
+++ b/frntnd-dashboard/src/App.css
@@ -15,13 +15,14 @@
 
 .App-header {
   background-color: #282c34;
+  padding-top: 10px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  color: white;
+  font-weight: bold;
 }
 
 .App-link {
@@ -32,6 +33,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
