--- a/frntnd-dashboard/src/App.css
+++ b/frntnd-dashboard/src/App.css
@@ -38,3 +38,27 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.container select {
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.container-results {
+  margin-top: 100px;
+}
+
+.badge {
+  width: 100%;
+}
