--- a/frntnd-dashboard/src/App.css
+++ b/frntnd-dashboard/src/App.css
@@ -57,8 +57,15 @@
 
 .container-results {
   margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .badge {
   width: 100%;
+}
+
+.results-code {
+  margin: 10px;
 }
