--- a/frntnd-dashboard/src/App.css
+++ b/frntnd-dashboard/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -16,7 +11,7 @@
 .App-header {
   background-color: #282c34;
   padding-top: 10px;
-  min-height: 100vh;
+  min-height: 93.5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -68,4 +63,11 @@
 
 .results-code {
   margin: 10px;
+}
+
+.alert-info {
+  background-color: #d1ecf1;
+  color: #0c5460 !important;
+  border-color: #bee5eb;
+  font-size: 20px !important;
 }
