refactor: Adjust header styling in App.css
The commit modifies the App.css file to adjust the styling of the header in the application. This change includes updating the background color, adding padding-top, updating the justify-content property, and setting the font-weight property. These changes improve the visual appearance and layout of the header section.

--- a/frntnd-dashboard/src/App.css
+++ b/frntnd-dashboard/src/App.css
@@ -11,7 +11,7 @@
 .App-header {
   background-color: #282c34;
   padding-top: 10px;
-  min-height: 93.5vh;
+  min-height: 88vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,4 +70,19 @@
   color: #0c5460 !important;
   border-color: #bee5eb;
   font-size: 20px !important;
+}
+
+.signature a {
+  color: white;
+}
+
+.signature a:hover {
+  color: #61dafb;
+}
+
+.signature img {
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+
 }
